# titanic-ml-gcp

./: README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: bootstrap.sh
src/titanic_ml/data/: preprocess.py
tests/: test_preprocess.py
